# brumaire

./: .gitignore  README.md  ai_tester.ipynb  board.ipynb  board_tester.ipynb  evaluation.ipynb  game_tester.ipynb  pyproject.toml  training.ipynb
brumaire/: __init__.py  agent.py  board.py  constants.py  controller.py  exp.py  model.py  record.py  renderer.py  session.py  utils.py
brumaire/rendering/: base.py  board.py  decl.py  hand.py  history.py
