[project]
name = "brumaire"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Akihisa Yagi", email = "caphosra@gmail.com" }
]
dependencies = [
    "ipykernel>=6.29.0",
    "pygame>=2.5.2",
    "numpy>=1.24.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["brumaire"]
