[project]
name = "brumaire"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Akihisa Yagi", email = "caphosra@gmail.com" }
]
dependencies = [
    "ipykernel>=6.29.0",
    "pygame>=2.5.2",
    "numpy>=1.24.4",
    "torch==2.2.0+cu121",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["brumaire"]

[[tool.rye.sources]]
name = "torch"
url = "https://download.pytorch.org/whl/cu121"
type = "index"
